# JNU-Quadruped-Robot-Prog-Host

./: CMakeLists.txt  README.md
src/: dev_data.c  dev_data.h  main.c  main.h  tasks.c  tasks.h
src/ctrl/: gait_plan.c  gait_plan.h  inv_kine.c  inv_kine.h  para_ctrl.c  para_ctrl.h
src/dev/: priority.c  priority.h  uart.c  uart.h
src/usr_lib/: CMakeLists.txt  filter.c  filter.h  matrix.c  matrix.h  pid.c  pid.h  ploy.c  ploy.h  scurve.c  scurve.h
